--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,62 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav-links {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; /* 16px */
+}
+
+.call-to-action {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 148%; /* 20.72px */
+  letter-spacing: 0.28px;
+  text-transform: uppercase;
+}
+
+.display-heading {
+  font-size: 68px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+.heading {
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 122%;
+}
+
+.sub-heading {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 34px;
+}
+
+.sub-title {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 122%; /* 14.64px */
+  letter-spacing: 1.8px;
+  text-transform: uppercase;
+}
+
+.card-title {
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+}
+.card-description {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
