--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --vw-coefficient: 1vw; /* Adjust this value for your design */
+}
+
 .nav-links {
-  font-size: 16px;
+  font-size: clamp(14px, 2.5vw + 0.5rem, 16px);
   font-style: normal;
   font-weight: 500;
   line-height: 100%; /* 16px */
 }
 
 .call-to-action {
-  font-size: 14px;
+  font-size: clamp(12px, 1.8vw + 0.28rem, 14px);
   font-style: normal;
   font-weight: 700;
   line-height: 148%; /* 20.72px */
@@ -19,28 +23,28 @@
 }
 
 .display-heading {
-  font-size: 68px;
+  font-size: clamp(36px, 5vw + 6rem, 68px);
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
 }
 
 .heading {
-  font-size: 48px;
+  font-size: clamp(28px, 3.5vw + 6rem, 48px);
   font-style: normal;
   font-weight: 500;
   line-height: 122%;
 }
 
 .sub-heading {
-  font-size: 20px;
+  font-size: clamp(16px, 2vw + 4rem, 20px);
   font-style: normal;
   font-weight: 400;
   line-height: 34px;
 }
 
 .sub-title {
-  font-size: 12px;
+  font-size: clamp(10px, 1.8vw + 0.18rem, 12px);
   font-style: normal;
   font-weight: 700;
   line-height: 122%; /* 14.64px */
@@ -49,14 +53,14 @@
 }
 
 .card-title {
-  font-size: 22px;
+  font-size: clamp(18px, 2.5vw + 1.2rem, 22px);
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
 }
+
 .card-description {
-  font-size: 16px;
+  font-size: clamp(14px, 1.8vw + 0.4rem, 16px);
   font-style: normal;
-  font-weight: 700;
   line-height: 24px;
 }
